add some websites to list and change icon to letter

--- a/app/popup.html
+++ b/app/popup.html
@@ -53,10 +53,10 @@
 
     <div class="ab-popup-wrapper">
       <div class="ab-top-panel">
-        <div class="ab-icon-class">
-          <img src="images/i-class-a.svg" alt="Class">
-        </div>
-        <div class="js-ads-class-temp" style="float: left; height: 60px; line-height: 60px; color: #aaa; text-transform: capitalize; padding: 0 10px;"></div>
+        <!--<div class="ab-icon-class">-->
+          <!--<img src="images/i-class-a.svg" alt="Class">-->
+        <!--</div>-->
+        <div class="js-ads-class-temp" style="font-weight: 700; font-size: 22px; float: left; height: 50px; line-height: 50px; color: #aaa; text-transform: capitalize; padding: 0 10px;"></div>
         <a href="settings.html" class="ab-icon-cog js-settings">
           <img src="images/i-cog.svg" alt="Cog">
         </a>
