--- a/app/popup.html
+++ b/app/popup.html
@@ -1,37 +1,65 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <link href="styles/popup.css" rel="stylesheet">
-  <title>Mass Fair Ads</title>
+    <meta charset="utf-8">
+    <link href="styles/popup.css" rel="stylesheet">
+    <title>Mass Fair Ads</title>
 </head>
 <body style="background: #aaa;">
-  <div class="ab-popup-wrapper">
+<div class="ab-popup-wrapper">
     <div class="ab-top-panel">
-      <div class="ab-balance">
-        <div data-i18n="popupBalance"></div>
-        <div class="ab-balance-icon">
-          <img src="images/i-mass-coin.svg" alt="Masscoin">
+        <div class="ab-balance">
+            <div data-i18n="popupBalance"></div>
+            <div class="ab-balance-icon">
+                <img src="images/i-mass-coin.svg" alt="Masscoin">
+            </div>
+            <div class="ab-balance-number">100</div>
         </div>
-        <div class="ab-balance-number">100</div>
-      </div>
-      <a href="settings.html" class="ab-icon-cog js-settings">
-        <img src="images/i-cog.svg" alt="Cog">
-      </a>
+        <a href="settings.html" class="ab-icon-cog js-settings">
+            <img src="images/i-cog.svg" alt="Cog">
+        </a>
     </div>
     <div class="ab-show-ads-class js-ads-class">
-      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 150 92" style="enable-background:new 0 0 150 92;" xml:space="preserve">
         <style type="text/css">
-            .st0{fill:#BCBEC0;}
-            .st1{fill:#FF455F;}
-            .st2{fill:#068FFC;}
-            .st3{filter:url(#Adobe_OpacityMaskFilter);}
-            .st4{fill:#FFFFFF;}
-            .st5{mask:url(#mask-2);fill:#BCBEC0;}
-            .st6{fill:#231F1F;}
-            .st7{filter:url(#Adobe_OpacityMaskFilter_1_);}
-            .st8{mask:url(#mask-4);fill:#BCBEC0;}
+            .st0 {
+                fill: #BCBEC0;
+            }
+
+            .st1 {
+                fill: #FF455F;
+            }
+
+            .st2 {
+                fill: #068FFC;
+            }
+
+            .st3 {
+                filter: url(#Adobe_OpacityMaskFilter);
+            }
+
+            .st4 {
+                fill: #FFFFFF;
+            }
+
+            .st5 {
+                mask: url(#mask-2);
+                fill: #BCBEC0;
+            }
+
+            .st6 {
+                fill: #231F1F;
+            }
+
+            .st7 {
+                filter: url(#Adobe_OpacityMaskFilter_1_);
+            }
+
+            .st8 {
+                mask: url(#mask-4);
+                fill: #BCBEC0;
+            }
         </style>
         <title>Page 1</title>
         <desc>Created with sketchtool.</desc>
@@ -203,109 +231,176 @@
         </g>
       </svg>
     </div>
-    <div class="ab-ads-class-text">This page has '<span class="js-ads-class-text-letter ab-ads-class-text-letter"></span>' grade of Mass certificate</div>
+    <div class="ab-ads-class-text">This page has '<span
+            class="js-ads-class-text-letter ab-ads-class-text-letter"></span>' grade of Mass certificate
+    </div>
     <div class="ab-see-grades">
-      <a class="ab-see-grades-link">See table of grades</a>
+        <a class="ab-see-grades-link">See table of grades</a>
     </div>
     <div class="ab-popup-hr"></div>
     <div class="ab-ad-toggle-wrap">
-      <label class="switch toggle">
-        <input type="checkbox" id="adSwitcher">
-        <div class="slider round"></div>
-      </label>
+        <label class="switch toggle">
+            <input type="checkbox" id="adSwitcher">
+            <div class="slider round"></div>
+        </label>
     </div>
     <div class="ab-popup-menu">
-      <div class="ab-popup-menu-item" id="gotoPick">
-        <div class="ab-icon-picker">
-          <img src="images/i-picker.svg" alt="Picker mode">
+        <div class="ab-popup-menu-item" id="gotoPick">
+            <div class="ab-icon-picker">
+                <img src="images/i-picker.svg" alt="Picker mode">
+            </div>
+            Element picker mode
         </div>
-        Element picker mode
-      </div>
-      <div class="ab-popup-menu-item">
-        <div class="ab-icon-warning">
-          <img src="images/i-warning.svg" alt="Complain about page">
+        <div class="ab-popup-menu-item">
+            <div class="ab-icon-warning">
+                <img src="images/i-warning.svg" alt="Complain about page">
+            </div>
+            Complain about page
         </div>
-        Complain about page
-      </div>
     </div>
 
+    <!--<div class="ab-bottom-icons">-->
+    <!--<a href="#" class="ab-bottom-one-icon" id="no-popups">-->
+    <!--<div class="ab-bottom-icon-wrap">-->
+    <!--<img src="images/i-popups-on.svg" alt="Popups">-->
+    <!--<span class="badge"></span>-->
+    <!--</div>-->
+    <!--</a>-->
+    <!--<a href="#" class="ab-bottom-one-icon" id="no-large-media">-->
+    <!--<div class="ab-bottom-icon-wrap">-->
+    <!--<img src="images/i-heavy-on.svg" alt="Heavy media content">-->
+    <!--<span class="badge"></span>-->
+    <!--</div>-->
+    <!--</a>-->
+    <!--<a href="#" class="ab-bottom-one-icon" id="no-cosmetic-filtering">-->
+    <!--<div class="ab-bottom-icon-wrap">-->
+    <!--<img src="images/i-cosmetic-on.svg" alt="Cosmetic">-->
+    <!--<span class="badge"></span>-->
+    <!--</div>-->
+    <!--</a>-->
+    <!--<a href="#" class="ab-bottom-one-icon" id="no-remote-fonts">-->
+    <!--<div class="ab-bottom-icon-wrap">-->
+    <!--<img src="images/i-fonts-on.svg" alt="Fonts">-->
+    <!--<span class="badge"></span>-->
+    <!--</div>-->
+    <!--</a>-->
+    <!--</div>&lt;!&ndash;/ab-bottom-icons&ndash;&gt;-->
     <div class="ab-bottom-icons">
-      <a href="#" class="ab-bottom-one-icon" id="no-popups">
-        <div class="ab-bottom-icon-wrap">
-          <img src="images/i-popups-on.svg" alt="Popups">
-          <span class="badge"></span>
+        <div class="js-bottom-one-icon ab-bottom-one-icon" id="no-popups">
+            <div class="ab-bottom-icon-wrap">
+                <div>
+                    <img src="images/i-popups-off.svg" alt="Popups" class="off">
+                    <img src="images/i-popups-on.svg" alt="Popups" class="on">
+                </div>
+                <span class="badge"></span>
+            </div>
         </div>
-      </a>
-      <a href="#" class="ab-bottom-one-icon" id="no-large-media">
-        <div class="ab-bottom-icon-wrap">
-          <img src="images/i-heavy-on.svg" alt="Heavy media content">
-          <span class="badge"></span>
+        <div class="js-bottom-one-icon ab-bottom-one-icon" id="no-large-media">
+            <div class="ab-bottom-icon-wrap">
+                <div>
+                    <img src="images/i-heavy-off.svg" alt="Heavy media content" class="off">
+                    <img src="images/i-heavy-on.svg" alt="Heavy media content" class="on">
+                </div>
+                <span class="badge"></span>
+            </div>
         </div>
-      </a>
-      <a href="#" class="ab-bottom-one-icon" id="no-cosmetic-filtering">
-        <div class="ab-bottom-icon-wrap">
-          <img src="images/i-cosmetic-on.svg" alt="Cosmetic">
-          <span class="badge"></span>
+        <div class="js-bottom-one-icon ab-bottom-one-icon" id="no-cosmetic-filtering">
+            <div class="ab-bottom-icon-wrap">
+                <div>
+                    <img src="images/i-cosmetic-off.svg" alt="Cosmetic" class="off">
+                    <img src="images/i-cosmetic-on.svg" alt="Cosmetic" class="on">
+                </div>
+                <span class="badge"></span>
+            </div>
         </div>
-      </a>
-      <a href="#" class="ab-bottom-one-icon" id="no-remote-fonts">
-        <div class="ab-bottom-icon-wrap">
-          <img src="images/i-fonts-on.svg" alt="Fonts">
-          <span class="badge"></span>
+        <div class="js-bottom-one-icon ab-bottom-one-icon" id="no-remote-fonts">
+            <div class="ab-bottom-icon-wrap">
+                <div style="min-width: 18px; text-align: right;">
+                    <img src="images/i-fonts-off.svg" alt="Fonts" class="off">
+                    <img src="images/i-fonts-on.svg" alt="Fonts" class="on">
+                </div>
+                <span class="badge"></span>
+            </div>
         </div>
-      </a>
     </div>
-  </div>
-  <div class="js-show-sources ab-show-sources ab-sources-hidden">
+</div>
+
+<div class="js-show-sources ab-show-sources ab-sources-hidden">
 
 
+    <div style="display: none !important;">
+        <a href="dashboard.html" target="_blank" id="gotoPrefs" data-i18n-tip="popupTipDashboard"
+           data-tip-position="under"><span id="appname"> </span> <span id="version"> </span><span
+                class="fa">&#xf013;</span></a>
+        <div id="panes">
+            <div class="tooltipContainer">
+                <p id="switch" data-i18n-tip="popupPowerSwitchInfo" data-tip-position="under"><span
+                        class="fa">&#xf011;</span></p>
+                <h2 id="dfToggler" data-i18n="popupBlockedRequestPrompt">&nbsp;</h2>
+                <p class="statName">
+                    <span data-i18n="popupBlockedOnThisPagePrompt">&nbsp;</span>&ensp;
+                    <!--<span id="gotoPick" class="fa tool" data-i18n-tip="popupTipPicker">&#xf1fb;</span>&ensp;-->
+                    <a href="logger-ui.html" class="fa tool enabled" data-i18n-tip="popupTipLog">&#xf022;</a>
+                </p>
+                <p class="statValue" id="page-blocked">?</p>
+                <div id="refresh" class="fa">&#xf021;</div>
+                <p class="statName" data-i18n="popupBlockedSinceInstallPrompt">&nbsp;</p>
+                <p class="statValue" id="total-blocked">?</p>
+                <h2 data-i18n="popupHitDomainCountPrompt">&nbsp;</h2>
+                <p class="statValue" id="popupHitDomainCount">&nbsp;</p>
+                <!--<div id="extraTools">-->
+                <!--<span id="no-popups" class="hnSwitch fa" data-i18n-tip="popupTipNoPopups">&#xf0c5;<span class="badge"></span><span></span></span>-->
+                <!--<span id="no-large-media" class="hnSwitch fa" data-i18n-tip="popupTipNoLargeMedia">&#xf008;<span class="badge"></span><span></span></span>-->
+                <!--<span id="no-cosmetic-filtering" class="hnSwitch fa" data-i18n-tip="popupTipNoCosmeticFiltering">&#xf070;<span class="badge"></span><span></span></span>-->
+                <!--<span id="no-remote-fonts" class="hnSwitch fa" data-i18n-tip="popupTipNoRemoteFonts">&#xf031;<span class="badge"></span><span></span></span>-->
+                <!--</div>-->
+            </div><!-- DO NOT REMOVE -->
+            <div class="tooltipContainer">
+                <div id="firewallContainer" class="minimized">
+                    <div><span data-i18n="popupAnyRulePrompt"></span><span data-src="/" data-des="*" data-type="*"
+                                                                           data-i18n-tip="popupTipGlobalRules"
+                                                                           data-tip-position="under"> </span><span
+                            data-src="." data-des="*" data-type="*" data-i18n-tip="popupTipLocalRules"
+                            data-tip-position="under"> </span></div>
+                    <div><span data-i18n="popupImageRulePrompt"></span><span data-src="/" data-des="*"
+                                                                             data-type="image"> </span><span
+                            data-src="." data-des="*" data-type="image"> </span></div>
+                    <div><span data-i18n="popup3pAnyRulePrompt"></span><span data-src="/" data-des="*"
+                                                                             data-type="3p"> </span><span data-src="."
+                                                                                                          data-des="*"
+                                                                                                          data-type="3p"> </span>
+                    </div>
+                    <div><span data-i18n="popupInlineScriptRulePrompt"></span><span data-src="/" data-des="*"
+                                                                                    data-type="inline-script"> </span><span
+                            data-src="." data-des="*" data-type="inline-script"> </span></div>
+                    <div><span data-i18n="popup1pScriptRulePrompt"></span><span data-src="/" data-des="*"
+                                                                                data-type="1p-script"> </span><span
+                            data-src="." data-des="*" data-type="1p-script"> </span></div>
+                    <div><span data-i18n="popup3pScriptRulePrompt"></span><span data-src="/" data-des="*"
+                                                                                data-type="3p-script"> </span><span
+                            data-src="." data-des="*" data-type="3p-script"> </span></div>
+                    <div><span data-i18n="popup3pFrameRulePrompt"></span><span data-src="/" data-des="*"
+                                                                               data-type="3p-frame"> </span><span
+                            data-src="." data-des="*" data-type="3p-frame"> </span></div>
+                </div>
+                <div id="rulesetTools"><span id="saveRules" class="fa" data-i18n-tip="popupTipSaveRules"
+                                             data-tip-position="under">&#xf023;</span><span id="revertRules" class="fa"
+                                                                                            data-i18n-tip="popupTipRevertRules"
+                                                                                            data-tip-position="under">&#xf12d;</span>
+                </div>
+            </div>
+        </div>
 
-
-
-
-  <div style="display: none !important;">
-    <a href="dashboard.html" target="_blank" id="gotoPrefs" data-i18n-tip="popupTipDashboard" data-tip-position="under"><span id="appname"> </span> <span id="version"> </span><span class="fa">&#xf013;</span></a>
-    <div id="panes">
-      <div class="tooltipContainer">
-        <p id="switch" data-i18n-tip="popupPowerSwitchInfo" data-tip-position="under"><span class="fa">&#xf011;</span></p>
-        <h2 id="dfToggler" data-i18n="popupBlockedRequestPrompt">&nbsp;</h2>
-        <p class="statName">
-          <span data-i18n="popupBlockedOnThisPagePrompt">&nbsp;</span>&ensp;
-          <!--<span id="gotoPick" class="fa tool" data-i18n-tip="popupTipPicker">&#xf1fb;</span>&ensp;-->
-          <a href="logger-ui.html" class="fa tool enabled" data-i18n-tip="popupTipLog">&#xf022;</a>
-        </p>
-        <p class="statValue" id="page-blocked">?</p>
-        <div id="refresh" class="fa">&#xf021;</div>
-        <p class="statName" data-i18n="popupBlockedSinceInstallPrompt">&nbsp;</p>
-        <p class="statValue" id="total-blocked">?</p>
-        <h2 data-i18n="popupHitDomainCountPrompt">&nbsp;</h2>
-        <p class="statValue" id="popupHitDomainCount">&nbsp;</p>
-        <!--<div id="extraTools">-->
-        <!--<span id="no-popups" class="hnSwitch fa" data-i18n-tip="popupTipNoPopups">&#xf0c5;<span class="badge"></span><span></span></span>-->
-        <!--<span id="no-large-media" class="hnSwitch fa" data-i18n-tip="popupTipNoLargeMedia">&#xf008;<span class="badge"></span><span></span></span>-->
-        <!--<span id="no-cosmetic-filtering" class="hnSwitch fa" data-i18n-tip="popupTipNoCosmeticFiltering">&#xf070;<span class="badge"></span><span></span></span>-->
-        <!--<span id="no-remote-fonts" class="hnSwitch fa" data-i18n-tip="popupTipNoRemoteFonts">&#xf031;<span class="badge"></span><span></span></span>-->
-        <!--</div>-->
-      </div><!-- DO NOT REMOVE --><div class="tooltipContainer">
-      <div id="firewallContainer" class="minimized">
-        <div><span data-i18n="popupAnyRulePrompt"></span><span data-src="/" data-des="*" data-type="*" data-i18n-tip="popupTipGlobalRules" data-tip-position="under"> </span><span data-src="." data-des="*" data-type="*" data-i18n-tip="popupTipLocalRules" data-tip-position="under"> </span></div>
-        <div><span data-i18n="popupImageRulePrompt"></span><span data-src="/" data-des="*" data-type="image"> </span><span data-src="." data-des="*" data-type="image"> </span></div>
-        <div><span data-i18n="popup3pAnyRulePrompt"></span><span data-src="/" data-des="*" data-type="3p"> </span><span data-src="." data-des="*" data-type="3p"> </span></div>
-        <div><span data-i18n="popupInlineScriptRulePrompt"></span><span data-src="/" data-des="*" data-type="inline-script"> </span><span data-src="." data-des="*" data-type="inline-script"> </span></div>
-        <div><span data-i18n="popup1pScriptRulePrompt"></span><span data-src="/" data-des="*" data-type="1p-script"> </span><span data-src="." data-des="*" data-type="1p-script"> </span></div>
-        <div><span data-i18n="popup3pScriptRulePrompt"></span><span data-src="/" data-des="*" data-type="3p-script"> </span><span data-src="." data-des="*" data-type="3p-script"> </span></div>
-        <div><span data-i18n="popup3pFrameRulePrompt"></span><span data-src="/" data-des="*" data-type="3p-frame"> </span><span data-src="." data-des="*" data-type="3p-frame"> </span></div>
-      </div><div id="rulesetTools"><span id="saveRules" class="fa" data-i18n-tip="popupTipSaveRules" data-tip-position="under">&#xf023;</span><span id="revertRules" class="fa" data-i18n-tip="popupTipRevertRules" data-tip-position="under">&#xf12d;</span></div>
+        <div id="templates" style="display: none">
+            <div><span></span><span data-src="/" data-des="" data-type="*"> </span><span data-src="." data-des=""
+                                                                                         data-type="*"> </span><span
+                    data-src="." data-des="" data-type="*"> </span></div>
+            <div id="actionSelector"><span id="dynaAllow"></span><span id="dynaNoop"></span><span id="dynaBlock"></span>
+            </div>
+            <div id="hotspotTip"></div>
+            <div id="tooltip"></div>
+        </div>
     </div>
-    </div>
-
-    <div id="templates" style="display: none">
-      <div><span></span><span data-src="/" data-des="" data-type="*"> </span><span data-src="." data-des="" data-type="*"> </span><span data-src="." data-des="" data-type="*"> </span></div>
-      <div id="actionSelector"><span id="dynaAllow"></span><span id="dynaNoop"></span><span id="dynaBlock"></span></div>
-      <div id="hotspotTip"></div>
-      <div id="tooltip"></div>
-    </div>
-  </div>
 
 </div>
 <script src="scripts/ublock/lib/punycode.js"></script>
