--- a/app/redirect.html
+++ b/app/redirect.html
@@ -3,5 +3,8 @@
 <head>
 </head>
 <body>
+    <script src="scripts/ublock/vapi-common.js"></script>
+    <script src="scripts/ublock/vapi-client.js"></script>
+    <script src="scripts/go_to_inner_page.js"></script>
 </body>
 </html>
