fix cosmetic popup icon position

--- a/app/popup.html
+++ b/app/popup.html
@@ -307,7 +307,7 @@
         <div class="js-bottom-one-icon ab-bottom-one-icon" id="no-cosmetic-filtering">
             <div class="ab-bottom-icon-wrap">
                 <div>
-                    <img src="images/i-cosmetic-off.svg" alt="Cosmetic" class="off">
+                    <img src="images/i-cosmetic-off.svg" alt="Cosmetic" class="off" style="padding-top: 1px">
                     <img src="images/i-cosmetic-on.svg" alt="Cosmetic" class="on">
                 </div>
                 <span class="badge"></span>
