migrate from udom to jquery

--- a/app/popup.html
+++ b/app/popup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link href="styles/popup.css" rel="stylesheet">
+    <script src="scripts/lib/jquery.js"></script>
     <title>Mass Fair Ads</title>
 </head>
 <body style="background: #aaa;">
