--- a/app/settings.html
+++ b/app/settings.html
@@ -111,10 +111,13 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-xs-6">
+                            <div class="col-xs-4">
                                 <button id="whitelistApply" class="btn btn-block btn-success" type="button" disabled="true" data-i18n="whitelistApply"></button>&ensp;
                             </div>
-                            <div class="col-xs-6">
+                            <div class="col-xs-4">
+                                <button id="whitelistDefault" class="btn btn-block btn-info" type="button"  data-i18n="whitelistDefault"></button>&ensp;
+                            </div>
+                            <div class="col-xs-4">
                                 <button id="whitelistRevert" class="btn btn-block btn-warning" type="button" disabled="true" data-i18n="genericRevert"></button>
                             </div>
                         </div>
