fix popup markup

--- a/app/popup.html
+++ b/app/popup.html
@@ -231,8 +231,8 @@
         </g>
       </svg>
     </div>
-    <div class="ab-ads-class-text">This page has '<span
-            class="js-ads-class-text-letter ab-ads-class-text-letter"></span>' grade of Mass certificate
+    <div class="ab-ads-class-text">
+        This page has '<span class="js-ads-class-text-letter ab-ads-class-text-letter"></span>' grade of Mass certificate
     </div>
     <div class="ab-see-grades">
         <a class="ab-see-grades-link">See table of grades</a>
@@ -259,32 +259,6 @@
         </div>
     </div>
 
-    <!--<div class="ab-bottom-icons">-->
-    <!--<a href="#" class="ab-bottom-one-icon" id="no-popups">-->
-    <!--<div class="ab-bottom-icon-wrap">-->
-    <!--<img src="images/i-popups-on.svg" alt="Popups">-->
-    <!--<span class="badge"></span>-->
-    <!--</div>-->
-    <!--</a>-->
-    <!--<a href="#" class="ab-bottom-one-icon" id="no-large-media">-->
-    <!--<div class="ab-bottom-icon-wrap">-->
-    <!--<img src="images/i-heavy-on.svg" alt="Heavy media content">-->
-    <!--<span class="badge"></span>-->
-    <!--</div>-->
-    <!--</a>-->
-    <!--<a href="#" class="ab-bottom-one-icon" id="no-cosmetic-filtering">-->
-    <!--<div class="ab-bottom-icon-wrap">-->
-    <!--<img src="images/i-cosmetic-on.svg" alt="Cosmetic">-->
-    <!--<span class="badge"></span>-->
-    <!--</div>-->
-    <!--</a>-->
-    <!--<a href="#" class="ab-bottom-one-icon" id="no-remote-fonts">-->
-    <!--<div class="ab-bottom-icon-wrap">-->
-    <!--<img src="images/i-fonts-on.svg" alt="Fonts">-->
-    <!--<span class="badge"></span>-->
-    <!--</div>-->
-    <!--</a>-->
-    <!--</div>&lt;!&ndash;/ab-bottom-icons&ndash;&gt;-->
     <div class="ab-bottom-icons">
         <div class="js-bottom-one-icon ab-bottom-one-icon" id="no-popups">
             <div class="ab-bottom-icon-wrap">
@@ -348,54 +322,62 @@
                 <p class="statValue" id="total-blocked">?</p>
                 <h2 data-i18n="popupHitDomainCountPrompt">&nbsp;</h2>
                 <p class="statValue" id="popupHitDomainCount">&nbsp;</p>
-                <!--<div id="extraTools">-->
-                <!--<span id="no-popups" class="hnSwitch fa" data-i18n-tip="popupTipNoPopups">&#xf0c5;<span class="badge"></span><span></span></span>-->
-                <!--<span id="no-large-media" class="hnSwitch fa" data-i18n-tip="popupTipNoLargeMedia">&#xf008;<span class="badge"></span><span></span></span>-->
-                <!--<span id="no-cosmetic-filtering" class="hnSwitch fa" data-i18n-tip="popupTipNoCosmeticFiltering">&#xf070;<span class="badge"></span><span></span></span>-->
-                <!--<span id="no-remote-fonts" class="hnSwitch fa" data-i18n-tip="popupTipNoRemoteFonts">&#xf031;<span class="badge"></span><span></span></span>-->
-                <!--</div>-->
-            </div><!-- DO NOT REMOVE -->
+            </div>
             <div class="tooltipContainer">
                 <div id="firewallContainer" class="minimized">
-                    <div><span data-i18n="popupAnyRulePrompt"></span><span data-src="/" data-des="*" data-type="*"
-                                                                           data-i18n-tip="popupTipGlobalRules"
-                                                                           data-tip-position="under"> </span><span
-                            data-src="." data-des="*" data-type="*" data-i18n-tip="popupTipLocalRules"
-                            data-tip-position="under"> </span></div>
-                    <div><span data-i18n="popupImageRulePrompt"></span><span data-src="/" data-des="*"
-                                                                             data-type="image"> </span><span
-                            data-src="." data-des="*" data-type="image"> </span></div>
-                    <div><span data-i18n="popup3pAnyRulePrompt"></span><span data-src="/" data-des="*"
-                                                                             data-type="3p"> </span><span data-src="."
-                                                                                                          data-des="*"
-                                                                                                          data-type="3p"> </span>
+                    <div>
+                        <span data-i18n="popupAnyRulePrompt"></span>
+                        <span data-src="/" data-des="*" data-type="*" data-i18n-tip="popupTipGlobalRules" data-tip-position="under"></span>
+                        <span data-src="." data-des="*" data-type="*" data-i18n-tip="popupTipLocalRules" data-tip-position="under"></span>
                     </div>
-                    <div><span data-i18n="popupInlineScriptRulePrompt"></span><span data-src="/" data-des="*"
-                                                                                    data-type="inline-script"> </span><span
-                            data-src="." data-des="*" data-type="inline-script"> </span></div>
-                    <div><span data-i18n="popup1pScriptRulePrompt"></span><span data-src="/" data-des="*"
-                                                                                data-type="1p-script"> </span><span
-                            data-src="." data-des="*" data-type="1p-script"> </span></div>
-                    <div><span data-i18n="popup3pScriptRulePrompt"></span><span data-src="/" data-des="*"
-                                                                                data-type="3p-script"> </span><span
-                            data-src="." data-des="*" data-type="3p-script"> </span></div>
-                    <div><span data-i18n="popup3pFrameRulePrompt"></span><span data-src="/" data-des="*"
-                                                                               data-type="3p-frame"> </span><span
-                            data-src="." data-des="*" data-type="3p-frame"> </span></div>
+                    <div>
+                        <span data-i18n="popupImageRulePrompt"></span>
+                        <span data-src="/" data-des="*" data-type="image"> </span>
+                        <span data-src="." data-des="*" data-type="image"> </span>
+                    </div>
+                    <div>
+                        <span data-i18n="popup3pAnyRulePrompt"></span>
+                        <span data-src="/" data-des="*" data-type="3p"></span>
+                        <span data-src="." data-des="*" data-type="3p"> </span>
+                    </div>
+                    <div>
+                        <span data-i18n="popupInlineScriptRulePrompt"></span>
+                        <span data-src="/" data-des="*" data-type="inline-script"></span>
+                        <span data-src="." data-des="*" data-type="inline-script"> </span>
+                    </div>
+                    <div>
+                        <span data-i18n="popup1pScriptRulePrompt"></span>
+                        <span data-src="/" data-des="*" data-type="1p-script"></span>
+                        <span data-src="." data-des="*" data-type="1p-script"> </span>
+                    </div>
+                    <div>
+                        <span data-i18n="popup3pScriptRulePrompt"></span>
+                        <span data-src="/" data-des="*" data-type="3p-script"></span>
+                        <span data-src="." data-des="*" data-type="3p-script"></span>
+                    </div>
+                    <div>
+                        <span data-i18n="popup3pFrameRulePrompt"></span>
+                        <span data-src="/" data-des="*" data-type="3p-frame"></span>
+                        <span data-src="." data-des="*" data-type="3p-frame"></span>
+                    </div>
                 </div>
-                <div id="rulesetTools"><span id="saveRules" class="fa" data-i18n-tip="popupTipSaveRules"
-                                             data-tip-position="under">&#xf023;</span><span id="revertRules" class="fa"
-                                                                                            data-i18n-tip="popupTipRevertRules"
-                                                                                            data-tip-position="under">&#xf12d;</span>
+                <div id="rulesetTools">
+                    <span id="saveRules" class="fa" data-i18n-tip="popupTipSaveRules" data-tip-position="under">&#xf023;</span>
+                    <span id="revertRules" class="fa" data-i18n-tip="popupTipRevertRules" data-tip-position="under">&#xf12d;</span>
                 </div>
             </div>
         </div>
 
-        <div id="templates" style="display: none">
-            <div><span></span><span data-src="/" data-des="" data-type="*"> </span><span data-src="." data-des=""
-                                                                                         data-type="*"> </span><span
-                    data-src="." data-des="" data-type="*"> </span></div>
-            <div id="actionSelector"><span id="dynaAllow"></span><span id="dynaNoop"></span><span id="dynaBlock"></span>
+        <div id="templates" class="hidden">
+            <div>
+                <span></span>
+                <span data-src="/" data-des="" data-type="*"></span><span data-src="." data-des="" data-type="*"></span>
+                <span data-src="." data-des="" data-type="*"></span>
+            </div>
+            <div id="actionSelector">
+                <span id="dynaAllow"></span>
+                <span id="dynaNoop"></span>
+                <span id="dynaBlock"></span>
             </div>
             <div id="hotspotTip"></div>
             <div id="tooltip"></div>
