Table of grades

--- a/app/popup.html
+++ b/app/popup.html
@@ -237,7 +237,7 @@
             This page has '<span class="js-ads-class-text-letter ab-ads-class-text-letter"></span>' grade of Mass certificate
         </div>
         <div class="ab-see-grades">
-            <a class="ab-see-grades-link">See table of grades</a>
+            <a href="table-of-grades.html" class="ab-see-grades-link">See table of grades</>
         </div>
     </div>
     <div class="js-undefined-ad-class ab-undefined-ad-class hidden">
@@ -247,7 +247,7 @@
         <div class="ab-undefined-ad-text">
             This page has no Mass certificate.
             <br>All ads are blocked. You can switch them on manually.
-            <br><a>See table of grades</a>
+            <br><a href="table-of-grades.html">See table of grades</a>
             <br><a>Interested in getting Mass certificate?</a>
         </div>
     </div>
