--- a/app/popup.html
+++ b/app/popup.html
@@ -237,7 +237,7 @@
             This page has '<span class="js-ads-class-text-letter ab-ads-class-text-letter"></span>' grade of Mass certificate
         </div>
         <div class="ab-see-grades">
-            <a href="table-of-grades.html" class="ab-see-grades-link">See table of grades</>
+            <a href="table-of-grades.html" class="ab-see-grades-link">See table of grades</a>
         </div>
     </div>
     <div class="js-undefined-ad-class ab-undefined-ad-class hidden">
