link to mass.network

--- a/app/popup.html
+++ b/app/popup.html
@@ -247,8 +247,8 @@
         <div class="ab-undefined-ad-text">
             This page has no Mass certificate.
             <br>All ads are blocked. You can switch them on manually.
-            <br><a href="table-of-grades.html">See table of grades</a>
-            <br><a>Interested in getting Mass certificate?</a>
+            <br><a href="table-of-grades.html" target="_blank">See table of grades</a>
+            <br><a href="http://mass.network" target="_blank">Interested in getting Mass certificate?</a>
         </div>
     </div>
     <div class="ab-popup-hr"></div>
